# simple-trash-cli

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  microlog.rs  table.rs  test.rs  trashinfo.rs  unified_trash.rs
src/commands/: empty.rs  list.rs  list_trashes.rs  mod.rs  orphaned.rs  put.rs  remove.rs  restore.rs
src/trashing/: mod.rs  trash.rs  trashinfo.rs  unified_trash.rs
tests/: test file 3.trashinfo  testfile1.txt.trashinfo  testfile2.txt.trashinfo
