[package]
name = "simple-trash-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
rustc-hash = "1.1.0"
urlencoding = "2.1.3"

[profile.release]
strip = true
lto = true
